Add account identifiers.

--- a/.github/workflows/src.yml
+++ b/.github/workflows/src.yml
@@ -1,9 +1,9 @@
 on:
   push:
     paths:
-      - 'test/**'
+      - 'src/**'
 jobs:
-  test:
+  src:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -12,6 +12,4 @@ jobs:
           dfx-version: 0.8.0
           install-moc: true
           vessel-version: 0.6.2
-      - run: |
-          cd test
-          for i in *.mo ; do moc $(vessel sources) -r $i ; done
+      - run: for i in src/*.mo ; do moc $(vessel sources) --check $i ; done
