--- a/.github/workflows/src.yml
+++ b/.github/workflows/src.yml
@@ -7,9 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: aviate-labs/setup-dfx@v0.2.2
+      - uses: aviate-labs/setup-dfx@v0.2.3
         with:
-          dfx-version: 0.8.1
-          install-moc: true
+          dfx-version: 0.8.4
           vessel-version: 0.6.2
-      - run: for i in src/*.mo ; do moc $(vessel sources) --check $i ; done
+      - run: for i in src/*.mo ; do $(vessel bin)/moc $(vessel sources) --check $i ; done
