--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,9 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: aviate-labs/setup-dfx@v0.2.2
+      - uses: aviate-labs/setup-dfx@v0.2.3
         with:
-          dfx-version: 0.8.1
-          install-moc: true
+          dfx-version: 0.8.4
           vessel-version: 0.6.2
-      - run: for i in test/*.mo ; do moc $(vessel sources) -r $i ; done
+      - run: for i in test/*.mo ; do $(vessel bin)/moc $(vessel sources) -r $i ; done
